# Chess

./: .clangd-format  .gitignore  CMakeLists.txt  README.md  todo.txt
.cache/clangd/index/: board.cpp.C1047621CF8D510B.idx  board.h.417FA16E2C81180A.idx  fen.cpp.9A74637D2C18499D.idx  fen.h.12048F126A88354B.idx  game.cpp.6E47982597F989D3.idx  game.h.F4E7371EC0F3B1FE.idx  main.cpp.F6250A91E18EAF5B.idx  moves.cpp.5DC55BCC18057475.idx  moves.h.47189DC62FD340E2.idx  piece.h.320A327FE1266AE2.idx  renderer.cpp.735B3AF8D08A8AAD.idx  renderer.h.3CC6208C56643D0B.idx
res/svg/: convert.sh
src/: board.cpp  board.h  fen.cpp  fen.h  game.cpp  game.h  inputhandler.cpp  inputhandler.h  main.cpp  moves.cpp  moves.h  perft.cpp  perft.h  piece.h  renderer.cpp  renderer.h
src/network/: server.cpp
tests/: CMakeLists.txt  speedtest.cpp  tests.cpp
